XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__SubscriptionRatePlanChargeTier__c.object
<CustomObject>
    <description>A product rate plan charge tier holds the prices for a product rate plan charge. Each product rate plan charge has at least one tier associated with it.</description>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscription Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Subscription_Rate_Plan_Charge_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__EndingUnit__c</fullName>
        <description>The end number of a range of units for the tier.</description>
        <label>Ending Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__IsOveragePrice__c</fullName>
        <description>Indicates if the price is an overage price. An overage occurs when usage surpasses the last defined tier. This field is applicable only to tier pricing and volume pricing models.</description>
        <label>Is Overage Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PriceFormat__c</fullName>
        <description>Indicates if the price is a flat fee or is per unit.</description>
        <label>Price Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Price__c</fullName>
        <description>The price of the tier if the charge is a flat fee, or the price of each unit in the tier if the change model is tiered pricing.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__StartingUnit__c</fullName>
        <description>The start number of a range of units for the tier.</description>
        <label>Starting Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionProductCharge__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Subscription Rate Plan Charge Tiers</relationshipLabel>
        <relationshipName>Subscription_Rate_Plan_Charge_Tiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__Tier__c</fullName>
        <description>A unique number that identifies the tier that the price applies to.</description>
        <label>Tier</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subscription Rate Plan Charge Tier</label>
    <nameField>
        <label>Subscription Rate Plan Charge Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Rate Plan Charge Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>